# Unredacted

./: .gitignore  README.md  docker-compose.yml  requirements.txt  tatus
atlas/: .env_example  Dockerfile  README.md  _requirements.txt  app.py  curl.txt  example-usage.py  nlp_utils.py  requirements.txt  setup.cfg
atlas/blueprints/: atlas.py  webapp.py
atlas/doc_models/: __init__.py  digital_object.py  doc_queue.py  document.py  keywords.py
atlas/models/: digital_object.py  doc_queue.py  document.py
atlas/mongo_db/: __init__.py  db_utils.py  mongo_db.py
atlas/na_api/: __init__.py  na_api.py  na_env.py  na_search.py  na_utils.py
atlas/utils/: __init__.py  doc_processing.py  search_logic.py
atlas/utils/db/: __init__.py  db_env.py  db_utils.py  mongo_db.py
atlas/utils/na_api/: __init__.py  na_api.py  na_env.py  na_utils.py
atlas/utils/nlp/: __init__.py  nlp.py  nlp_env.py  nlp_thread.py
django_app/: .env_example  Dockerfile  db.sqlite3  package-lock.json  setup.cfg  start.sh
django_app/atlas_api/: atlas_api.py  atlas_env.py  atlas_utls.py
django_app/backend/: __init__.py  logic_controller.py
django_app/backend/db/: __init__.py  db_utils.py  mongo_db.py
django_app/backend/na_api/: __init__.py  na_utils.py
django_app/backend/nlp/: nlp_env.py  nlp_thread.py  nlp_utils.py
django_app/dashboard/: api_reader.py  atlas_connector.py  models.py  urls.py  utils.py  views.py
django_app/dashboard/templates/: about_page.html  api_info.html  document_page.html  home_page.html  landing_page.html  (+2 more)
django_app/doc_models/: __init__.py  digital_object.py  doc_queue.py  document.py
django_app/utils/: __init__.py  db_interaction.py  middleman.py  na_search.py  nlp.py
django_app/website/: settings.py  urls.py
(+40 files in other folders)
