[metadata]
name = unredacted_flask_api
version = 1.0.0
license = MIT
description = Serves the endpoint for the unreadacted application

[options]
python_requires = >=3.7, <4
include_package_data = True
packages = find:
install_requires =
    Flask
    requests
    python-dotenv
    asgiref
    blinker
    certifi
    charset-normalizer
    click
    debugpy
    Django
    django-htmx
    django-tailwind
    Flask-Cors
    idna
    itsdangerous
    Jinja2
    MarkupSafe
    python-dotenv
    requests
    sqlparse
    typing_extension
    urllib3
    Werkzeug
