[metadata]
name = unredacted_atlas_api
version = 1.0.0
license = MIT
description = Serves the endpoint for the unreadacted application

[options]
python_requires = >=3.7, <4
include_package_data = True
packages = find:
install_requires =
    Flask
    requests
    python-dotenv
    asgiref
    blinker
    certifi
    charset-normalizer
    click
    debugpy
    Flask-Cors
    idna
    itsdangerous
    Jinja2
    MarkupSafe
    sqlparse
    urllib3
    Werkzeug
    python-dotenv
    python-decouple
    ibm_watson
    PyPDF2
    pymongo
    openai
