[metadata]
name = unredacted_django_app
version = 1.0.0
license = MIT
description = Provides the frontend functionality for interacting with the unredacted application

[options]
python_requires = >=3.7, <4
include_package_data = True
packages = find:
install_requires =
    Django
    django-htmx
    django-tailwind
    django-browser-reload
    python-dotenv
    python-decouple
    ibm_watson
    PyPDF2
    pymongo
    openai
    reportlab
    Flask
    requests